test/parse-error-test/annotation_mode/parse-error.expected
[error] test/parse-error-test/annotation_mode/input.ddl[1.17] error: unknown: unrecognized mode

@mode("unknown")

                ^
